// Copyright 2022 Linkall Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package linkall.vanus.proxy;

import "cloudevents.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/linkall-labs/vanus/proto/pkg/proxy";

service Client {
  rpc Publish(PublishRequest) returns (google.protobuf.Empty);
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse);
  rpc Ack(stream AckRequest) returns (google.protobuf.Empty);
}

message PublishRequest {
  string eventbus_name = 1;
  cloudevents.CloudEventBatch events = 2;
}

message SubscribeRequest {
  string eventbus_name = 1;
  uint64 subscription_id = 2;
}

message SubscribeResponse {
  uint64 sequence_id = 1;
  cloudevents.CloudEventBatch events = 2;
}

message AckRequest {
  uint64 sequence_id = 1;
  bool result = 2;
}
